[correct] macro define

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,10 +43,10 @@ if(NOT WIN32)
 endif()
 
 if(WIN32)
-  add_definitions(-D_WIN32)
+  add_definitions(-D__rtems__)
   set(time_impl_c src/time_win32.c)
 else()
-  add_definitions(-D__GNU_VISIBLE)
+add_definitions(-D__GNU_VISIBLE)
   set(time_impl_c src/time_unix.c)
 endif()
 
