--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,8 @@ endif()
 if(WIN32)
   set(time_impl_c src/time_win32.c)
 else()
+  add_definitions(-D__rtems__)
+  add_definitions(-D_POSIX_MONOTONIC_CLOCK)
   set(time_impl_c src/time_unix.c)
 endif()
 
